--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -17,7 +17,7 @@
     </div>
   </div>
   <div class="navbar-container">
-    <div class="game-options pt-2 pb-3">
+    <div class="game-options pt-3 pb-2">
       <div class="row">
         <div class="col-4 col-md-4">
           <div class="text-center game-timer">
@@ -93,11 +93,12 @@
     font-size: 30px;
     margin: 0 5px;
     color: #0000002e;
-    webkit-text-stroke: 2px black;
+    -webkit-text-stroke: 2px black;
   }
 
   .game-options .game-lifes .life-center span.fa.active {
     color: red;
+    text-shadow: 2px 2px 20px red;
   }
 
   .game-options .game-timer .time-countdown {
@@ -108,3 +109,16 @@
     font-size: 0.78rem;
   }
 </style>
+<script>
+  $(document).ready(() => {
+    let time = 0;
+    const timeIntval = setInterval(() => {
+      time++;
+      const minutes = parseInt(time / 60);
+      const seconds = time - minutes * 60;
+      const formattedMinutes = minutes < 10 ? `0${minutes}` : minutes;
+      const formattedSeconds = seconds < 10 ? `0${seconds}` : seconds;
+      $(".time-countdown").text(`${formattedMinutes}:${formattedSeconds}`);
+    }, 1000);
+  });
+</script>
