--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="col-4 col-md-4">
           <div class="text-center game-timer">
-            <div class="time-countdown">11:26</div>
+            <div class="time-countdown">00:00</div>
             <div class="title">Time Played</div>
           </div>
         </div>
@@ -66,6 +66,7 @@
     padding: 5px;
     font-family: sans-serif;
     text-align: center;
+    box-shadow: 0 -5px 10px #00000059;
   }
 
   .user-navbar .navbar-container ul {
@@ -94,11 +95,13 @@
     margin: 0 5px;
     color: #0000002e;
     -webkit-text-stroke: 2px black;
+    opacity: 0.4;
   }
 
   .game-options .game-lifes .life-center span.fa.active {
     color: red;
     text-shadow: 2px 2px 20px red;
+    opacity: 1;
   }
 
   .game-options .game-timer .time-countdown {
