Check if Game Started

--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -18,7 +18,7 @@
   </div>
   <div class="navbar-container">
     <input type="hidden" id="userLifeCount" value="lifes" />
-    <% if(user && lifes>0){ %>
+    <% if(user && lifes>0 && gameStarted){ %>
     <div class="game-options pt-3 pb-2">
       <div class="row">
         <div class="col-4 col-md-4">
