--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -83,10 +83,14 @@
                 </div>
               </div>
             </div>
+            <div class="card-footer restBtn" style="display: none">
+              <a href="" class="btn btn-success w-100">Restart The Game</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    <input type="hidden" id="gameStarted" value="<%= gameStarted %>" />
     <style>
       .countdown-holder {
         font-size: 3rem;
