--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -23,7 +23,7 @@
     />
   </head>
   <body style="margin: 0">
-    <% if(lifes==0 && user && gameStarted) { %>
+    <% if(lifes==0 && user && gameStarted && playable) { %>
     <script>
       const cnfPur = confirm(
         "You have no Life remain to play this Map, Purchase some from the store?"
