--- a/public/css/style.css
+++ b/public/css/style.css
@@ -350,6 +350,14 @@ img {
   animation: 3s changeBackgroundColor infinite;
 }
 
+.pacman-inner {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  rotate: -50deg;
+  background: conic-gradient(#3498db 0deg 300deg, #00000000 300deg 360deg);
+}
+
 @keyframes changeBackgroundColor {
   0%,
   100% {
