Login Search console

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -192,6 +192,14 @@
                     <div class="col-12 col-md-6 col-lg-2 my-2">
                       <button class="w-100 btn btn-warning">Create</button>
                     </div>
+                    <div class="col-12">
+                      <a class="btn btn-primary" href="#" id="GameModeToggle">
+                        <span class="fa fa-gamepad"></span> Enable Game Mode
+                      </a>
+                    </div>
+                    <div class="col-12">
+                      <div class="row" id="showGameOptions"></div>
+                    </div>
                   </div>
                 </form>
                 <div
