--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="AWs8hJem8IT6O4cQ7612JJiVbaFPXWy-x-FUNH9PxVE"
+    />
     <title>
       <% if (locals.title) { %> <%= title.toUpperCase() %> - Urban Escape<%
       }else{%>Urban Escape<%}%>
