--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,6 +1,10 @@
 <html>
   <head>
     <title>Login</title>
+    <meta
+      name="google-site-verification"
+      content="AWs8hJem8IT6O4cQ7612JJiVbaFPXWy-x-FUNH9PxVE"
+    />
     <style>
       body {
         overflow: hidden;
