Tag Search Console

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -125,7 +125,7 @@
                 </div>
                 <div class="plugin-login">
                   <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-12 my-1">
                       <div
                         class="login-card google-login animate__animated animate__backInRight animate__delay-1s"
                       >
@@ -135,7 +135,7 @@
                         ></div>
                       </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-12 my-1">
                       <div
                         class="login-card github-login animate__animated animate__backInLeft animate__delay-1s"
                       >
