--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      name="google-site-verification"
+      content="AWs8hJem8IT6O4cQ7612JJiVbaFPXWy-x-FUNH9PxVE"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome - Urban Escape</title>
