--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -5,6 +5,11 @@
       name="google-site-verification"
       content="AWs8hJem8IT6O4cQ7612JJiVbaFPXWy-x-FUNH9PxVE"
     />
+    <meta
+      name="description"
+      content="URBANESCAPE is an innovative web app blending real-world maps with Pac-Man gameplay. Explore dynamic maps, unlock rewards and badges, and enjoy various game modes for an exciting, immersive experience!"
+    />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome - Urban Escape</title>
