Removed Search By ID

--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -42,17 +42,9 @@
         <% }else{ %>
         <div class="my-5"></div>
         <%}%> <%if(locals.user){%>
-        <div class="d-flex">
-          <input
-            id="mapId"
-            class="form-control me-1"
-            placeholder="Enter Map ID"
-          />
-          <button class="btn btn-warning ms-1" onclick="submitt()">Play</button>
-        </div>
         <div class="my-3">
           <a
-            href="https://google.com"
+            href="https://www.urbanescapes.online/"
             target="_blank"
             class="btn btn-success w-100 rounded-0 my-1"
             >Homepage</a
