--- a/views/pages/postRegister.ejs
+++ b/views/pages/postRegister.ejs
@@ -3,81 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome!</title>
+    <title><%= title %> - URBANESCAPE</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
   </head>
   <body>
-    <div class="body <%= type %>">
-      <div class="content <%= type %>">
-        <h2><%= message %></h2>
-        <a class="myBtn <%= type %>" href="/login">Login Now</a>
+    <div
+      class="w-100 d-inline-flex vh-100 justify-content-center align-items-center msg-<%= type %>"
+    >
+      <div class="shadow-lg mx-3 bg-white">
+        <h3 class="text-center py-2 border-bottom"><%=title%></h3>
+        <div class="body py-2 px-2 px-sm-4">
+          <p class="text-center mb-3">
+            <span class="fa fa-4x fa-<%=icon%> opacity-50"></span>
+          </p>
+          <p class="text-center lead"><%=message%></p>
+        </div>
+        <div class="mb-3 text-center border-top pt-3">
+          <a href="/auth" class="btn btn-secondary">Login</a>
+        </div>
       </div>
     </div>
-
     <style>
-      .body {
-        width: 100%;
-        height: 100vh;
-        position: fixed;
-        top: 0;
-        left: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: sans-serif;
-        background: rgb(0, 0, 30);
+      .msg-success {
+        background: linear-gradient(45deg, #00ff003b, #00700f2e);
+      }
+      .msg-danger {
+        background: linear-gradient(45deg, #ffa5003b, #ff00002e);
       }
 
-      .body.danger {
-        background: rgb(30, 0, 0);
+      .msg-danger .shadow-lg {
+        border: 2px solid #ff00005c;
       }
 
-      .content {
-        width: 100%;
-        text-align: center;
-        background: linear-gradient(45deg, #00000063, #7d74ff91);
-        border: 2px solid #6970f9;
-        border-left: 0;
-        border-right: 0;
-        backdrop-filter: blur(5px);
-        color: white;
-        text-transform: uppercase;
-        user-select: none;
-        padding-bottom: 40px;
-      }
-
-      .content.danger {
-        background: linear-gradient(45deg, #00000063, #ff747491);
-        border-color: #f96969;
-      }
-
-      a.myBtn {
-        text-decoration: none;
-        color: white;
-        text-shadow: 0 0 BLACK;
-        -webkit-text-stroke: 0;
-        font-size: 1.2rem;
-        background: #000;
-        padding: 10px 15px;
-        border-radius: 10px;
-        border: 2px solid;
-        transition: 0.2s;
-      }
-
-      a.myBtn:hover {
-        background: white;
-        color: #1200ff;
-        box-shadow: 0 0 5px #1200ff;
-      }
-
-      a.myBtn.danger:hover {
-        background: white;
-        color: #ff0000;
-        box-shadow: 0 0 5px #cdb5b5;
-      }
-
-      h2 {
-        font-weight: 500;
-        padding: 10px 0;
+      .msg-success .shadow-lg {
+        border: 2px solid #00ff2f5c;
       }
     </style>
   </body>
