--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -201,10 +201,12 @@
                       <div
                         class="login-card google-login animate__animated animate__backInUp animate__delay-1s"
                       >
-                        <div
-                          class="g_id_signin my-2"
-                          data-type="standard"
-                        ></div>
+                        <div class="d-inline-flex w-100 justify-content-center">
+                          <div
+                            class="g_id_signin my-2"
+                            data-type="standard"
+                          ></div>
+                        </div>
                       </div>
                     </div>
                   </div>
