Password Recovery Format Page

--- a/views/pages/passwordRecovery.ejs
+++ b/views/pages/passwordRecovery.ejs
@@ -47,31 +47,99 @@
         letter-spacing: 3px;
       }
 
-      .login-box form input.c-input:focus {
+      form input.c-input:focus {
         border-bottom: 2px solid white;
         color: white;
       }
 
-      .login-box form input.c-input::placeholder {
-        color: #ffffff8f;
+      form input.c-input::placeholder {
+        color: #ffffffc2;
+      }
+
+      p.parag {
+        background: #0087ff36;
+        padding: 5px 10px;
+        border-radius: 5px;
+        border-left: 2px solid #028000;
+        font-size: 1.2rem;
       }
     </style>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   </head>
   <body>
     <div
-      class="w-100 d-inline-flex vh-100 justify-content-center align-items-center msg-<%= type %>"
+      class="w-100 d-inline-flex vh-100 justify-content-center align-items-center"
     >
       <div class="shadow-lg mx-3 boxhandle">
-        <%if(locals.type=="request"){%>
-        <h3>Set Password</h3>
-        <%}else{%>
-        <h3 class="border-bottom mb-3 pb-3">Password Recovery</h3>
-        <p class="lead">Vijay Singh (thakurvijayofficial@gmail.com)</p>
+        <%if(locals.type && type=="request"){%>
+        <h3 class="mb-3 text-center pb-2 border-bottom">Reset Password</h3>
+        <p class="lead parag">
+          Enter your email, you will get an password reset link on your Email.
+        </p>
         <div class="body-content">
           <div class="my-box">
             <form
-              class="form m-0 p-0"
-              action="/auth/password/recovery"
+              class="form- m-0 p-0"
+              action="/auth/password/recovery/request"
+              method="POST"
+            >
+              <input
+                type="email"
+                required
+                class="c-input"
+                name="email"
+                placeholder="Enter Your Email Address"
+              />
+              <div class="my-2">
+                <div class="d-inline-flex w-100 justify-content-center">
+                  <div
+                    class="g-recaptcha"
+                    data-sitekey="<%=CAPTCHA_KEY%>"
+                    data-theme="dark"
+                    data-callback="onCaptchaSuccess"
+                  ></div>
+
+                  <input type="hidden" id="captchaCode" />
+                </div>
+              </div>
+              <button
+                class="btn btn-secondary w-100 mt-2 fnlsbmt"
+                style="display: none"
+              >
+                Submit
+              </button>
+            </form>
+          </div>
+        </div>
+        <script>
+          $(document).ready(() => {
+            $("form").submit(() => {
+              if (!$("#captchaCode").val()) {
+                alert("Captcha is Mandatory!");
+                return false;
+              }
+              const email = $("form input[name='email']").val();
+              if (!email) {
+                alert("Email can't be Empty!");
+                return false;
+              }
+            });
+          });
+          function onCaptchaSuccess(response) {
+            $("#captchaCode").val(response);
+            $(".fnlsbmt").show();
+          }
+        </script>
+        <%}else{%>
+        <h3 class="mb-3 text-center pb-2 border-bottom">Password Recovery</h3>
+        <p class="lead parag">
+          <%= user.name.toUpperCase() %> (<%= user.email %>)
+        </p>
+        <div class="body-content">
+          <div class="my-box">
+            <form
+              class="form- m-0 p-0"
+              action="/auth/password/recovery/set"
               method="POST"
             >
               <input
@@ -107,34 +175,33 @@
             </form>
           </div>
         </div>
+        <script>
+          $(document).ready(() => {
+            $("form").submit(() => {
+              if (!$("#captchaCode").val()) {
+                alert("Captcha is Mandatory!");
+                return false;
+              }
+              const pass1 = $("form input[name='pass1']").val();
+              const pass2 = $("form input[name='pass2']").val();
+              if (!pass1 || !pass2) {
+                alert("All fields are required!");
+                return false;
+              } else if (pass1 != pass2) {
+                alert("Password must be same!");
+              } else if (pass1.length < 6) {
+                alert("Password length must not be less than 6!");
+              }
+            });
+          });
+          function onCaptchaSuccess(response) {
+            $("#captchaCode").val(response);
+            $(".fnlsbmt").show();
+          }
+        </script>
         <%}%>
       </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script>
-      $(document).ready(() => {
-        $("form").submit(() => {
-          if (!$("#captchaCode").val()) {
-            alert("Captcha is Mandatory!");
-            return false;
-          }
-          const pass1 = $("form input[name='pass1']").val();
-          const pass2 = $("form input[name='pass2']").val();
-          if (!pass1 || !pass2) {
-            alert("All fields are required!");
-            return false;
-          } else if (pass1 != pass2) {
-            alert("Password must be same!");
-          } else if (pass1.length < 6) {
-            alert("Password length must not be less than 6!");
-          }
-        });
-      });
-      function onCaptchaSuccess(response) {
-        $("#captchaCode").val(response);
-        $(".fnlsbmt").show();
-      }
-    </script>
     <script src="https://www.google.com/recaptcha/api.js"></script>
   </body>
 </html>
