--- a/views/pages/passwordRecovery.ejs
+++ b/views/pages/passwordRecovery.ejs
@@ -8,6 +8,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <style>
       body {
@@ -70,9 +74,18 @@
     <div
       class="w-100 d-inline-flex vh-100 justify-content-center align-items-center"
     >
-      <div class="shadow-lg mx-3 boxhandle">
-        <%if(locals.type && type=="request"){%>
-        <h3 class="mb-3 text-center pb-2 border-bottom">Reset Password</h3>
+      <div
+        class="shadow-lg mx-3 boxhandle col-sm-10 col-md-8 col-lg-6 col-xl-4"
+      >
+        <% if(locals.success){ %>
+        <div class="mb-5 mt-3 text-center">
+          <span class="fa fa-envelope fa-5x"></span>
+        </div>
+        <div class="my-3 alert alert-success"><%= success %></div>
+        <%}else if(locals.type && type=="request"){%>
+        <h3 class="mb-3 text-center pb-2 border-bottom">
+          <span class="fa fa-key"></span> Reset Password
+        </h3>
         <p class="lead parag">
           Enter your email, you will get an password reset link on your Email.
         </p>
@@ -131,7 +144,9 @@
           }
         </script>
         <%}else{%>
-        <h3 class="mb-3 text-center pb-2 border-bottom">Password Recovery</h3>
+        <h3 class="mb-3 text-center pb-2 border-bottom">
+          <span class="fa fa-key"></span> Password Recovery
+        </h3>
         <p class="lead parag">
           <%= user.name.toUpperCase() %> (<%= user.email %>)
         </p>
@@ -199,7 +214,19 @@
             $(".fnlsbmt").show();
           }
         </script>
+        <%}%> <% if(locals.error){ %>
+        <div class="my-2">
+          <div class="alert alert-danger text-center"><%=error%></div>
+        </div>
         <%}%>
+        <div class="btn-container border-top pt-4 mt-5 mb-2 text-center">
+          <a class="btn btn-success mx-2" href="/auth"
+            ><span class="fa fa-lock"></span> Login</a
+          >
+          <a class="btn btn-success mx-2" href="/"
+            ><span class="fa fa-home"></span> Homepage</a
+          >
+        </div>
       </div>
     </div>
     <script src="https://www.google.com/recaptcha/api.js"></script>
