Password recovery setting

--- a/views/pages/passwordRecovery.ejs
+++ b/views/pages/passwordRecovery.ejs
@@ -154,9 +154,15 @@
           <div class="my-box">
             <form
               class="form- m-0 p-0"
-              action="/auth/password/recovery/set"
+              action="/auth/password/recovery/verify/<%= codeId %>"
               method="POST"
             >
+              <input
+                type="hidden"
+                name="recoveryCode"
+                value="<%= codeId %>"
+                readonly
+              />
               <input
                 type="password"
                 class="c-input"
