Creating Controller for Pacman in Admin

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -158,6 +158,21 @@
                     <button class="btn btn-outline-success save">Save</button>
                   </div>
                 </div>
+                <div class="game-mode-controller">
+                  <div class="game-settings">
+                    <div class="position-controller">
+                      <button class="btn btn-success">
+                        Set Initial Position
+                      </button>
+                    </div>
+                    <div class="speed-controller">
+                      <input type="range" class="form-control" />
+                    </div>
+                    <div class="radius-controller">
+                      <input type="range" class="radius-control" />
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="vj_dynamic maplist">
