--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -288,3 +288,18 @@
   background: #cc00ff3b;
   backdrop-filter: blur(5px);
 }
+
+.game-mode-controller {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  background: white;
+  min-height: 400px;
+  min-width: 300px;
+  overflow: hidden;
+  border-top-left-radius: 5px;
+}
+
+.game-mode-controller .game-settings {
+  padding: 10px 20px;
+}
