--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -221,7 +221,7 @@
                         />
                       </div>
                       <div class="my-2">
-                        <button class="btn btn-info w-100">
+                        <button class="btn btn-info w-100 updatePacmanSettings">
                           Update Settings
                         </button>
                       </div>
