Updating Pacman Controller from DB

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -158,7 +158,7 @@
                     <button class="btn btn-outline-success save">Save</button>
                   </div>
                 </div>
-                <div class="game-mode-controller">
+                <div class="game-mode-controller" style="display: none">
                   <div class="game-settings">
                     <div class="header">
                       <h3>Pacman Settings</h3>
